Services  and Networking/NetworkPolicy/backend.yaml
apiVersion: v1
kind: Deployment
metadata: 
  name:  network-policy-backend
  labels:   
    app:  backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:  
      app: backend-pod
  template:
    metadata: 
      labels:
        app: backend-pod
  containers:
    - name: backend-pod-for-network-policy
      image: nginx
      ports:
        - containerPort:  80
