Services  and Networking/NetworkPolicy/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  labels:
    app: outsider
spec:
  containers:
  - name: debug
    image: busybox
    command: ["sleep", "3600"]




    # this yaml file is just to test the pod with another label ie outsider label
