Services  and Networking/NetworkPolicy/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  network-policy-frontend
  labels:
    app: frontend-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      app:  frontend-pod
  template:
    metadata:
      labels:
        app: frontend-pod
  containers:
    - name: frontend 
      image: busybox
      command: ["sleep", "3600"]
